# parslfold

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: chai1_example.py  chai_aurora_prod.yaml  chai_aurora_scale_test.yaml  esmfold_aurora_prod.yaml  esmfold_aurora_scale_test.yaml  esmfold_example.py  esmfold_polaris_config.yaml  esmfold_polaris_prod_config.yaml  esmfold_workstation_config.yaml  workstation_config.yaml
examples/data/: uniprotkb_accession_A0LFF8_OR_accession_2024_12_19.fasta
parsl_esmfold/: __init__.py  esmfold.py  main.py  parsl.py  utils.py
parslfold/: __init__.py  chai1.py  esmfold.py  esmfold_hf.py  main.py  parsl.py  utils.py
