[build-system]
requires = ["setuptools>=64.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "parsl_esmfold"
version = "0.1.0"
authors = [
    {name = "Alexander Brace", email = "abrace@anl.gov"},
]
description = "Run ESMFold in parallel using Parsl."
readme = "README.md"
requires-python = "<3.10"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "parsl>=2024.10.14",
    "torch",
    "biopython",
    "pydantic",
    "parsl-object-registry @ git+https://github.com/braceal/parsl_object_registry.git",
]

[project.urls]
homepage = "https://github.com/ramanathanlab/parsl_esmfold"
documentation = "https://github.com/ramanathanlab/parsl_esmfold"
repository = "https://github.com/ramanathanlab/parsl_esmfold"


[project.optional-dependencies]
dev = [
    "covdefaults>=2.2",
    "coverage",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "tox",
    "virtualenv",
    "types-PyYAML",
]
docs = [
    "black",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-material==9.4.7",
    "mkdocs-section-index",
    "mkdocstrings==0.23.0",
    "mkdocstrings-python==1.8.0",
    "mike",
]

[tool.codespell]
skip = """
.git,
.github,
__pycache__,
build,
dist,
.*egg-info
"""

[tool.coverage.run]
plugins = ["covdefaults"]
omit = ["examples"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "testing.*"
allow_incomplete_defs = true
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_incomplete_defs = true
allow_untyped_defs = true

[tool.ruff]
# See all rules here: https://beta.ruff.rs/docs/rules
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    # mccabe
    "C90",
    # isort
    "I",
    # pep8-naming
    "N",
    # pydocstyle
    "D",
    # pyupgrade
    "UP",
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-commas
    "COM",
    # flake8-comprehensions
    "C4",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-pytest-style
    "PT",
    # flake8-quotes
    "Q",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # PyLint
    "PL",
    # ruff-specific
    "RUF",
]
line-length = 79
extend-ignore = ["Q001", "SIM102", "PLR0913"]
target-version = "py38"

[tool.ruff.flake8-pytest-style]
parametrize-values-type = "tuple"

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.isort]
force-single-line = true
known-first-party = ["parsl_esmfold", "test", "testing"]
order-by-type = false
required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"*/__init__.py" = ["F401"]
"*/*_test.py" = ["D10"]

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.setuptools.packages.find]
exclude = ["tests*", "testing*"]
namespaces = false
